--- a/media-plus/css/audio-player.css
+++ b/media-plus/css/audio-player.css
@@ -86,3 +86,10 @@
   left: 117px;
   bottom: 83px;
 }
+.cr-media-audio {
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/bg-audio.png");
+  background-position: center bottom;
+  background-repeat: no-repeat;
+}
