--- a/media-plus/css/audio-player.styl
+++ b/media-plus/css/audio-player.styl
@@ -1,2 +1,9 @@
 @import 'audio'
 
+.cr-media-audio
+	width: 100%
+	height 100%
+	background-image url(../img/bg-audio.png)
+	background-position center bottom
+	background-repeat no-repeat
+
