--- a/media-plus/css/audio/functions.styl
+++ b/media-plus/css/audio/functions.styl
@@ -12,8 +12,8 @@ $cr-audio-button
 
 audio-button-yx(y, x)
 	@extends $cr-audio-button
-	left (x)px
-	bottom (600 - y - buttH)px
+	left (x + 8)px
+	bottom (600 - y - buttH - 8)px
 
 audio-button(x, y)
 	audio-button-yx(x, y)
