--- a/media-plus/css/audio/index.styl
+++ b/media-plus/css/audio/index.styl
@@ -1,7 +1,7 @@
 @require functions
 
 .cr-audio-button-power
-	audio-button(30, 37)
+	audio-button(47, 353)
 
 .cr-audio-button-play
 	audio-button(47, 417)
@@ -28,13 +28,13 @@
 	audio-button(256, 419)
 
 .cr-audio-button-mute
-	audio-button(262, 170)
+	audio-button(262, (170 - 32))
 
 .cr-audio-button-volumeup
-	audio-button(205, 93)
+	audio-button(205, (93 - 32))
 
 .cr-audio-button-volumedown
-	audio-button(320, 93)
+	audio-button(320, (93 - 32))
 
 .cr-audio-button-forward
 	audio-button(117, 547)
