--- a/media-plus/css/audio-player.css
+++ b/media-plus/css/audio-player.css
@@ -135,7 +135,7 @@
   bottom: 75px;
 }
 .cr-audio-time {
-  right: 268px;
+  right: 180px;
   text-align: right;
   bottom: 38px;
 }
@@ -145,4 +145,15 @@
   height: 58px;
   right: 368px;
   bottom: 18px;
+}
+.cr-icones-my-audio,
+.cr-icones-my-video {
+  position: absolute;
+  bottom: 430px;
+}
+.cr-icones-my-audio {
+  left: 10px;
+}
+.cr-icones-my-video {
+  left: 140px;
 }
