--- a/media-plus/css/audio-player.styl
+++ b/media-plus/css/audio-player.styl
@@ -59,3 +59,16 @@
 	height 58px
 	right: 368px;
 	bottom 18px
+
+.cr-icones-my-audio,
+.cr-icones-my-video
+	position absolute
+	bottom: 430px
+
+.cr-icones-my-audio
+	left: 10px
+
+.cr-icones-my-video
+	left: 140px
+
+
