--- a/media-plus/css/audio-buttons/index.styl
+++ b/media-plus/css/audio-buttons/index.styl
@@ -36,14 +36,17 @@
 .cr-audio-button-volumedown
 	audio-button(80, 180)
 
-.cr-audio-button-forward
-	audio-button(566, 383)
-
 .cr-audio-button-previous
 	audio-button(372, 383)
 
-.cr-audio-button-back
+.cr-audio-button-rewind
 	audio-button(434, 383)
 
-.cr-audio-button-next
+.cr-audio-button-forward
 	audio-button(504, 383)
+
+.cr-audio-button-next
+	audio-button(566, 383)
+
+.cr-audio-button-back
+	audio-button(636, 383)
