--- a/media-plus/css/audio-player.styl
+++ b/media-plus/css/audio-player.styl
@@ -45,13 +45,18 @@
 	text-decoration: small-caps;
 
 .cr-audio-composition
-	left: 56px;
-	bottom: 75px;
+	left 56px
+	bottom 75px
+	color #f8bfa9
+	visibility hidden
+
+.cr-audio-current
+	color #f8bfa9
 
 .cr-audio-time
 	right: 180px;
-	text-align: right;
-	bottom 38px
+	text-align right
+	bottom 41px
 
 .cr-audio-gauge
 	position: absolute
