--- a/media-plus/css/buttons-audio/functions.styl
+++ b/media-plus/css/buttons-audio/functions.styl
@@ -1,5 +1,11 @@
-buttW = 32
-buttH = 32
+buttW = 60
+buttH = 60
+joyLeft = 424
+joyBot = 225
+volDnLeft = 48
+volDnBot  = 153
+pwrLeft = 349
+pwrBot  = 444
 
 $cr-audio-button
 	position absolute
