--- a/media-plus/css/large-buttons/functions.styl
+++ b/media-plus/css/large-buttons/functions.styl
@@ -6,7 +6,7 @@ $cr-icon
 	width (stepX)px 
 	height (stepY)px 
 	margin 0
-	background-image: url('../img/buttons-128x109.png')
+	background-image: url('../img/large-buttons.png')
 	cursor: pointer
 	display: inline-block
 	float: left
