--- a/media-plus/css/media-space.css
+++ b/media-plus/css/media-space.css
@@ -26,7 +26,7 @@
   width: 128px;
   height: 109px;
   margin: 0;
-  background-image: url("../img/buttons-128x109.png");
+  background-image: url("../img/large-buttons.png");
   cursor: pointer;
   display: inline-block;
   float: left;
